// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Избранное В избранном есть города 1`] = `
<section
  className="favorites"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-row-flex ant-row-flex-space-between"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <h1
            aria-label={null}
            className="ant-typography"
            style={
              Object {
                "WebkitLineClamp": null,
              }
            }
          >
            Избранное
          </h1>
        </div>
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <span
            className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-group-wrapper ant-input-group-wrapper-lg"
          >
            <span
              className="ant-input-wrapper ant-input-group"
            >
              <span
                className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                style={null}
              >
                <input
                  className="ant-input ant-input-lg"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Добавить новый город"
                  style={null}
                  type="text"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <i
                    aria-label="icon: info-circle"
                    className="anticon anticon-info-circle"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </i>
                </span>
              </span>
              <span
                className="ant-input-group-addon"
              >
                <button
                  className="ant-btn ant-input-search-button ant-btn-primary ant-btn-lg"
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    aria-label="icon: plus"
                    className="anticon anticon-plus"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="plus"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                      />
                      <path
                        d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                      />
                    </svg>
                  </i>
                </button>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        className="ant-row-flex ant-row-flex-bottom"
        style={
          Object {
            "marginBottom": -8,
            "marginLeft": -8,
            "marginRight": -8,
            "marginTop": -8,
          }
        }
      >
        <div
          className="ant-col ant-col-12"
          style={
            Object {
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
            }
          }
        >
          <section
            className="favorite-city"
          >
            <div
              className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle"
              style={Object {}}
            >
              <div
                className="ant-col ant-col-21"
                style={Object {}}
              >
                <div
                  className="small-city"
                >
                  <div
                    className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle"
                    style={Object {}}
                  >
                    <div
                      className="ant-col"
                      style={Object {}}
                    >
                      <h2
                        className="favorite-title"
                      >
                        Stockholm
                      </h2>
                    </div>
                    <div
                      className="ant-col"
                      style={Object {}}
                    >
                      <p
                        className="temperature-at-favorite"
                      >
                        <img
                          alt="icon"
                          className="weather-icon"
                          src="http://openweathermap.org/img/wn/10n@2x.png"
                        />
                        2.96
                         ℃
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-col"
                style={Object {}}
              >
                <button
                  className="ant-btn ant-btn-default ant-btn-circle ant-btn-lg"
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    aria-label="icon: delete"
                    className="anticon anticon-delete"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </i>
                </button>
              </div>
            </div>
            <div
              className="ant-spin-nested-loading"
            >
              <div
                className="ant-spin-container"
              >
                <div
                  className="ant-descriptions ant-descriptions-bordered"
                >
                  <div
                    className="ant-descriptions-view"
                  >
                    <table>
                      <tbody>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Ветер
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            8.2
                             м/с
                          </td>
                        </tr>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Облачность
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            модерате раин
                          </td>
                        </tr>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Давление
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            1003
                             гПа
                          </td>
                        </tr>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Влажность
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            93
                            %
                          </td>
                        </tr>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Координаты
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            [
                            59.33
                            , 
                            18.07
                            ]
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          className="ant-col ant-col-12"
          style={
            Object {
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 8,
            }
          }
        >
          <section
            className="favorite-city"
          >
            <div
              className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle"
              style={Object {}}
            >
              <div
                className="ant-col ant-col-21"
                style={Object {}}
              >
                <div
                  className="small-city"
                >
                  <div
                    className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle"
                    style={Object {}}
                  >
                    <div
                      className="ant-col"
                      style={Object {}}
                    >
                      <h2
                        className="favorite-title"
                      >
                        Oslo
                      </h2>
                    </div>
                    <div
                      className="ant-col"
                      style={Object {}}
                    >
                      <p
                        className="temperature-at-favorite"
                      >
                        <img
                          alt="icon"
                          className="weather-icon"
                          src="http://openweathermap.org/img/wn/10n@2x.png"
                        />
                        5.8
                         ℃
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="ant-col"
                style={Object {}}
              >
                <button
                  className="ant-btn ant-btn-default ant-btn-circle ant-btn-lg"
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    aria-label="icon: delete"
                    className="anticon anticon-delete"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </i>
                </button>
              </div>
            </div>
            <div
              className="ant-spin-nested-loading"
            >
              <div
                className="ant-spin-container"
              >
                <div
                  className="ant-descriptions ant-descriptions-bordered"
                >
                  <div
                    className="ant-descriptions-view"
                  >
                    <table>
                      <tbody>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Ветер
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            8.2
                             м/с
                          </td>
                        </tr>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Облачность
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            лигhт раин
                          </td>
                        </tr>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Давление
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            987
                             гПа
                          </td>
                        </tr>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Влажность
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            100
                            %
                          </td>
                        </tr>
                        <tr
                          className="ant-descriptions-row"
                        >
                          <th
                            className="ant-descriptions-item-label ant-descriptions-item-colon"
                          >
                            Координаты
                          </th>
                          <td
                            className="ant-descriptions-item-content"
                            colSpan={1}
                          >
                            [
                            59.91
                            , 
                            10.74
                            ]
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Избранное Избранное в состоянии загрузки 1`] = `
<section
  className="favorites"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div>
      <div
        className="ant-spin ant-spin-spinning"
      >
        <span
          className="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            className="ant-spin-dot-item"
          />
          <i
            className="ant-spin-dot-item"
          />
          <i
            className="ant-spin-dot-item"
          />
          <i
            className="ant-spin-dot-item"
          />
        </span>
      </div>
    </div>
    <div
      className="ant-spin-container ant-spin-blur"
    >
      <div
        className="ant-row-flex ant-row-flex-space-between"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <h1
            aria-label={null}
            className="ant-typography"
            style={
              Object {
                "WebkitLineClamp": null,
              }
            }
          >
            Избранное
          </h1>
        </div>
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <span
            className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-group-wrapper ant-input-group-wrapper-lg"
          >
            <span
              className="ant-input-wrapper ant-input-group"
            >
              <span
                className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                style={null}
              >
                <input
                  className="ant-input ant-input-lg"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Добавить новый город"
                  style={null}
                  type="text"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <i
                    aria-label="icon: info-circle"
                    className="anticon anticon-info-circle"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </i>
                </span>
              </span>
              <span
                className="ant-input-group-addon"
              >
                <button
                  className="ant-btn ant-input-search-button ant-btn-primary ant-btn-lg"
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    aria-label="icon: plus"
                    className="anticon anticon-plus"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="plus"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                      />
                      <path
                        d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                      />
                    </svg>
                  </i>
                </button>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        className="ant-row-flex ant-row-flex-bottom"
        style={
          Object {
            "marginBottom": -8,
            "marginLeft": -8,
            "marginRight": -8,
            "marginTop": -8,
          }
        }
      />
    </div>
  </div>
</section>
`;

exports[`Избранное Ошибка при загрузке избранного 1`] = `
<section
  className="favorites"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-row-flex ant-row-flex-space-between"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <h1
            aria-label={null}
            className="ant-typography"
            style={
              Object {
                "WebkitLineClamp": null,
              }
            }
          >
            Избранное
          </h1>
        </div>
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <span
            className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-group-wrapper ant-input-group-wrapper-lg"
          >
            <span
              className="ant-input-wrapper ant-input-group"
            >
              <span
                className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                style={null}
              >
                <input
                  className="ant-input ant-input-lg"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Добавить новый город"
                  style={null}
                  type="text"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <i
                    aria-label="icon: info-circle"
                    className="anticon anticon-info-circle"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </i>
                </span>
              </span>
              <span
                className="ant-input-group-addon"
              >
                <button
                  className="ant-btn ant-input-search-button ant-btn-primary ant-btn-lg"
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    aria-label="icon: plus"
                    className="anticon anticon-plus"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="plus"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                      />
                      <path
                        d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                      />
                    </svg>
                  </i>
                </button>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        className="ant-result ant-result-error"
      >
        <div
          className="ant-result-icon"
        >
          <i
            aria-label="icon: close-circle"
            className="anticon anticon-close-circle"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </i>
        </div>
        <div
          className="ant-result-title"
        >
          Произошла неизвестная ошибка
        </div>
        <div
          className="ant-result-subtitle"
        >
          Попробуйте ещё раз через некоторое время
        </div>
        <div
          className="ant-result-extra"
        >
          <button
            className="ant-btn"
            onClick={[Function]}
            type="button"
          >
            <span>
              Попробовать ещё раз
            </span>
          </button>
        </div>
      </div>
      <div
        className="ant-row-flex ant-row-flex-bottom"
        style={
          Object {
            "marginBottom": -8,
            "marginLeft": -8,
            "marginRight": -8,
            "marginTop": -8,
          }
        }
      />
    </div>
  </div>
</section>
`;

exports[`Избранное Пустое избранное 1`] = `
<section
  className="favorites"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-row-flex ant-row-flex-space-between"
        style={Object {}}
      >
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <h1
            aria-label={null}
            className="ant-typography"
            style={
              Object {
                "WebkitLineClamp": null,
              }
            }
          >
            Избранное
          </h1>
        </div>
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <span
            className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-group-wrapper ant-input-group-wrapper-lg"
          >
            <span
              className="ant-input-wrapper ant-input-group"
            >
              <span
                className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                style={null}
              >
                <input
                  className="ant-input ant-input-lg"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Добавить новый город"
                  style={null}
                  type="text"
                  value=""
                />
                <span
                  className="ant-input-suffix"
                >
                  <i
                    aria-label="icon: info-circle"
                    className="anticon anticon-info-circle"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </i>
                </span>
              </span>
              <span
                className="ant-input-group-addon"
              >
                <button
                  className="ant-btn ant-input-search-button ant-btn-primary ant-btn-lg"
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    aria-label="icon: plus"
                    className="anticon anticon-plus"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="plus"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                      />
                      <path
                        d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                      />
                    </svg>
                  </i>
                </button>
              </span>
            </span>
          </span>
        </div>
      </div>
      <div
        className="ant-empty"
      >
        <div
          className="ant-empty-image"
        >
          <svg
            height="152"
            viewBox="0 0 184 152"
            width="184"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                transform="translate(24 31.67)"
              >
                <ellipse
                  cx="67.797"
                  cy="106.89"
                  fill="#F5F5F7"
                  fillOpacity=".8"
                  rx="67.797"
                  ry="12.668"
                />
                <path
                  d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                  fill="#AEB8C2"
                />
                <path
                  d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                  fill="url(#linearGradient-1)"
                  transform="translate(13.56)"
                />
                <path
                  d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                  fill="#F5F5F7"
                />
                <path
                  d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                  fill="#DCE0E6"
                />
              </g>
              <path
                d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
                fill="#DCE0E6"
              />
              <g
                fill="#FFF"
                transform="translate(149.65 15.383)"
              >
                <ellipse
                  cx="20.654"
                  cy="3.167"
                  rx="2.849"
                  ry="2.815"
                />
                <path
                  d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                />
              </g>
            </g>
          </svg>
        </div>
        <p
          className="ant-empty-description"
        >
          Мы ничего не знаем о ваших любимых городах. Исправьте это с помощью поля справа вверху - подумайте, где часто бываете, или просто помечтайте
        </p>
      </div>
      <div
        className="ant-row-flex ant-row-flex-bottom"
        style={
          Object {
            "marginBottom": -8,
            "marginLeft": -8,
            "marginRight": -8,
            "marginTop": -8,
          }
        }
      />
    </div>
  </div>
</section>
`;
